--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,108 @@
             line-height: 1.5;
             border-left: 4px solid #fae100;
         }
+
+        /* Frequency Stats Modal Styles */
+        #statsModal {
+            display: none;
+            position: fixed;
+            z-index: 10000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            flex-direction: column;
+        }
+
+        .stats-header {
+            padding: 15px 20px;
+            background: #4bab9a;
+            /* Color from user screenshot */
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-weight: bold;
+        }
+
+        .stats-header h2 {
+            margin: 0;
+            font-size: 18px;
+            flex: 1;
+            text-align: center;
+        }
+
+        .stats-tabs {
+            display: flex;
+            gap: 15px;
+            padding: 10px 20px;
+            background: #fff;
+            border-bottom: 1px solid #eee;
+        }
+
+        .stats-tab {
+            font-size: 14px;
+            color: var(--secondary);
+            cursor: pointer;
+            padding: 5px 0;
+        }
+
+        .stats-tab.active {
+            font-weight: bold;
+            border-bottom: 2px solid var(--secondary);
+        }
+
+        .stats-body {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px 20px;
+        }
+
+        .freq-row {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 12px;
+        }
+
+        .freq-num {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            border: 1px solid #ffaa00;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            font-weight: bold;
+            color: #333;
+            flex-shrink: 0;
+        }
+
+        .freq-bar-container {
+            flex: 1;
+            height: 8px;
+            background: #eee;
+            border-radius: 4px;
+            position: relative;
+        }
+
+        .freq-bar-fill {
+            height: 100%;
+            background: #555;
+            border-radius: 4px;
+            width: 0%;
+            transition: width 0.5s ease;
+        }
+
+        .freq-count {
+            width: 35px;
+            text-align: right;
+            font-size: 14px;
+            color: #666;
+            font-weight: 500;
+        }
     </style>
 </head>
 
@@ -1319,6 +1421,28 @@
                 onclick="goToShop()">
                 🚗 지금 당장 사러 가기 (길찾기)
             </button>
+        </div>
+
+        <!-- Frequency Statistics Modal -->
+        <div id="statsModal">
+            <div class="stats-header">
+                <span style="cursor:pointer; font-size: 20px;" onclick="closeStats()">&lt; Menu</span>
+                <h2>번호별 출현횟수</h2>
+                <div style="width: 60px;"></div>
+            </div>
+            <div class="stats-tabs">
+                <span class="stats-tab" id="tab-3" onclick="updateStatsPeriod(3)">3주</span>
+                <span class="stats-tab" id="tab-5" onclick="updateStatsPeriod(5)">5주</span>
+                <span class="stats-tab" id="tab-10" onclick="updateStatsPeriod(10)">10주</span>
+                <span class="stats-tab active" id="tab-all" onclick="updateStatsPeriod('all')">전체</span>
+            </div>
+            <div style="padding: 10px 20px; font-size: 13px; color: var(--secondary); background: #f9f9f9;">
+                <span id="statsRangeText">1회 ~ 1210회</span>
+                <span style="float:right;">출현횟수순</span>
+            </div>
+            <div class="stats-body" id="statsBody">
+                <!-- Frequency rows injected here -->
+            </div>
         </div>
     </div>
     </div>
@@ -2136,8 +2260,69 @@
         }
 
         function showStats() {
-            showToast("📊 번호별 출현횟수 기능 개발 중입니다!", "info");
             closeNav();
+            const modal = document.getElementById('statsModal');
+            modal.style.display = 'flex';
+            updateStatsPeriod('all');
+        }
+
+        function closeStats() {
+            document.getElementById('statsModal').style.display = 'none';
+        }
+
+        function updateStatsPeriod(period) {
+            // UI Tab active state
+            document.querySelectorAll('.stats-tab').forEach(t => t.classList.remove('active'));
+            const activeTab = document.getElementById(period === 'all' ? 'tab-all' : `tab-${period}`);
+            if (activeTab) activeTab.classList.add('active');
+
+            renderFrequencyStats(period);
+        }
+
+        function renderFrequencyStats(period) {
+            const history = window.lottoHistory || {};
+            const rounds = Object.keys(history).map(Number).sort((a, b) => b - a); // Descending rounds
+            if (rounds.length === 0) return;
+
+            const targetRounds = period === 'all' ? rounds : rounds.slice(0, period);
+            const counts = {};
+            for (let i = 1; i <= 45; i++) counts[i] = 0;
+
+            targetRounds.forEach(r => {
+                const nums = history[r] || [];
+                nums.forEach(n => {
+                    if (counts[n] !== undefined) counts[n]++;
+                });
+            });
+
+            // Convert to array and sort DESC by frequency
+            const sorted = Object.entries(counts).map(([num, count]) => ({
+                num: parseInt(num),
+                count: count
+            })).sort((a, b) => b.count - a.count);
+
+            const maxCount = Math.max(...sorted.map(s => s.count)) || 1;
+            const body = document.getElementById('statsBody');
+            body.innerHTML = '';
+
+            // Update range text
+            const latest = rounds[0];
+            const oldest = targetRounds[targetRounds.length - 1];
+            document.getElementById('statsRangeText').innerText = `${oldest}회 ~ ${latest}회`;
+
+            sorted.forEach(item => {
+                const perc = (item.count / maxCount) * 100;
+                const row = document.createElement('div');
+                row.className = 'freq-row';
+                row.innerHTML = `
+                    <div class="freq-num">${item.num < 10 ? '0' + item.num : item.num}</div>
+                    <div class="freq-bar-container">
+                        <div class="freq-bar-fill" style="width: ${perc}%"></div>
+                    </div>
+                    <div class="freq-count">${item.count}</div>
+                `;
+                body.appendChild(row);
+            });
         }
 
         function showQRScanner() {
