--- a/index.html
+++ b/index.html
@@ -1512,19 +1512,8 @@
             console.log('Records with 5+ wins:', highWinCount);
 
             document.getElementById('totalDataCount').innerText = data.length.toLocaleString();
-            if (data.length > 0) {
-                const rounds = data.map(d => d.r);
-                const maxR = Math.max(...rounds);
-                const minR = Math.max(1, maxR - 9); // Mobile Performance: Show last 10 rounds by default
-                document.getElementById('maxRound').value = maxR;
-                document.getElementById('minRound').value = minR;
-            }
 
             applyFilters();
-
-            // Initial load of recent rounds
-            const initialMax = parseInt(document.getElementById('maxRound').value) || 1210;
-            updateRecentRounds(initialMax);
         }
 
         window.onload = function () {
@@ -1559,9 +1548,19 @@
                 .then(historyData => {
                     window.lottoHistory = historyData;
                     console.log('History data loaded');
-                    // Update widgets immediately if we have a default/initial max round
-                    const initialMax = parseInt(document.getElementById('maxRound').value) || 1210;
-                    updateRecentRounds(initialMax);
+
+                    // Fast UI Init: Get max round from history
+                    const rounds = Object.keys(historyData).map(Number).sort((a, b) => b - a);
+                    if (rounds.length > 0) {
+                        const maxR = rounds[0];
+                        const minR = Math.max(1, maxR - 9); // Default to last 10 rounds for speed
+
+                        document.getElementById('maxRound').value = maxR;
+                        document.getElementById('minRound').value = minR;
+
+                        // Update widgets immediately
+                        updateRecentRounds(maxR);
+                    }
                 })
                 .catch(err => console.error('History load failed:', err));
 
