Fix: Restore missing GPS button to bottom right

--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,11 @@
         </div>
     </div>
 
+    <!-- GPS Button -->
+    <div class="floating-btn gps-button" onclick="requestMyLocation()" title="내 위치 찾기">
+        📍
+    </div>
+
     <!-- Side Navigation Drawer -->
     <div id="sideNavOverlay" class="side-nav-overlay" onclick="closeNav()"></div>
     <div id="sideNav" class="side-nav">
