Fix: Restore original GPS SVG icon and ensure visibility on mobile with fixed positioning

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
         /* Floating Button Common */
         .floating-btn {
-            position: absolute;
+            position: fixed;
             width: 50px;
             height: 50px;
             background: #fff;
@@ -321,7 +321,20 @@
         .gps-button {
             bottom: 30px;
             right: 30px;
-            border: 2px solid var(--primary);
+            background: var(--primary);
+            color: white;
+            border: none;
+        }
+
+        .gps-button svg {
+            width: 24px;
+            height: 24px;
+            fill: white;
+        }
+
+        /* Loading state for GPS */
+        .gps-button.loading svg {
+            animation: rotate 1s linear infinite;
         }
 
         /* Menu Button Style */
@@ -1149,7 +1162,10 @@
 
     <!-- GPS Button -->
     <div class="floating-btn gps-button" onclick="requestMyLocation()" title="내 위치 찾기">
-        📍
+        <svg viewBox="0 0 24 24">
+            <path
+                d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
+        </svg>
     </div>
 
     <!-- Side Navigation Drawer -->
